--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -39,6 +39,12 @@
   margin-left: 8px;
 }
 
+#header .modal .form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 @media (max-width: 768px) {
   #header {
     padding: 24px;
