Listagem de Categorias

--- a/src/pages/Categories/style.css
+++ b/src/pages/Categories/style.css
@@ -1,3 +1,9 @@
+#categories .loading-message {
+  text-align: center;
+  color: white;
+  margin-top: 32px;
+}
+
 #categories .container {
   width: 600px;
 }
