--- a/src/pages/Categories/CategoryList/style.css
+++ b/src/pages/Categories/CategoryList/style.css
@@ -1,3 +1,10 @@
+#categories .empty {
+  color: #8f919c;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 24px;
+}
+
 #categories .item {
   display: flex;
   align-items: center;
