--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -1,10 +1,17 @@
-.search {
+.search-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+  gap: 8px;
+}
+
+.search-input {
   display: flex;
   align-items: center;
   margin-left: 16px;
 }
 
-.search input {
+.search-input input {
   color: #ffffff;
   font-family: inherit;
   font-size: 14px;
@@ -16,11 +23,11 @@
   outline: none;
 }
 
-.search input::placeholder {
+.search-input input::placeholder {
   color: #72747e;
 }
 
-.search i {
+.search-input i {
   position: relative;
   margin-right: -32px;
   color: #838590;
