--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -34,11 +34,11 @@
 }
 
 @media (max-width: 576px) {
-  .search {
+  .search-input {
     flex: 1;
   }
 
-  .search input {
+  .search-input input {
     flex: 1;
     width: 100%;
   }
