--- a/src/components/TaskList/style.css
+++ b/src/components/TaskList/style.css
@@ -152,7 +152,7 @@
   }
 
   .tasks .item {
-    padding: 12px 16px;
+    padding: 8px 0;
   }
 
   .tasks .priority {
@@ -172,6 +172,10 @@
 }
 
 @media (max-width: 576px) {
+  .tasks .item:nth-child(odd) {
+    background-color: transparent;
+  }
+
   .tasks .title {
     max-width: 180px;
   }
