--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@
 /* Bootstrap Icons */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
 }
 
